2010-06-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/libYARP_OS/include/yarp/os/BufferedPort.h: keep envelope
	information properly associated with queued messages
	(thanks Daniel Krieg)

	* src/libYARP_dev/src/DeviceGroup.cpp: remove unnecessary 
	polling if all devices within a group are backgrounded
	(thanks Philipp Robbel).

	* src/libYARP_OS/src/Terminator.cpp: make "Terminee" ports be
	just regular ports.  Network-compatible with previous terminator 
	protocol.  Give error for conflicting terminees (thanks
	Philipp Robbel).

2010-06-08  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>

	* conf/YarpPlugin.cmake: improve internal documentation of
	plugin system

	* conf/FindGtkPlus.cmake: apply OSX patch from Gianluca Massera

	* conf/FindGthread.cmake: apply OSX patch from Gianluca Massera

2010-06-05  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* scripts/fetch-ace.sh: Change ACE configuration when bundled
	with YARP to facilitate compiling YARP with gcc (as opposed
	to g++).  The core yarp libraries and executables make
	no use of C++ libraries, and so can be compiled without 
	linking to libstdc++.  This can be handy for avoiding conflicts
	with different versions of this library.  Steps:
	  cd $YARP_ROOT
	  mkdir -p build/no_cxx_lib
	  cd build/no_cxx_lib
	  ../../scripts/fetch-ace.sh
	  mkdir static_libs
	  cp `g++ -print-file-name=libsupc++.a` static_libs
	  CXX=gcc CC=gcc cmake ../..
	  make
	  ldd bin/yarp  # should not contain libstdc++.so

2010-06-04  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/carriers/tcpros_carrier/yarpros.cpp: small helper program
	for hooking up yarp ports and ROS entities, to the extent
	currently possible.

          yarpros roscore <hostname> <port number>
          -- tell yarp how to reach the ros master
          -- example: yarpros roscore 192.168.0.1 11311

          yarpros read <yarpname> <nodename> <topicname>
          -- read to a YARP port from a ROS node's contribution to a topic